# AiShell

./: .gitignore  LICENSE  README.md  codecov.yml  install.sh  monkey_patch_invoke.py  pyproject.toml  tasks.py  test.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check_code.yml  pull_request.yml  release.yml  test.yml
aishell/: __init__.py  __main__.py  cli.py  main.py
aishell/adapters/: __init__.py  openai_chatgpt_adapter.py  openai_cookie_adapter.py
aishell/adapters/test/: test_openai_chatgpt_adapter.py
aishell/cli/: __init__.py  aishell.py  ask.py  cli_app.py  config_aishell.py
aishell/cli/test/: test_config_aishell.py
aishell/exceptions/: __init__.py  unauthorized_access_error.py
aishell/models/: __init__.py  aishell_config_model.py  language_model.py  open_ai_response_model.py  revchatgpt_chatbot_config_model.py  str_enum.py
aishell/query_clients/: __init__.py  chatgpt_client.py  gpt3_client.py  official_chatgpt_client.py  query_client.py  reverse_engineered_chatgpt_client.py
aishell/tests/: sample_test.py
aishell/utils/: __init__.py  aishell_config_manager.py  construct_prompt.py  make_executable_command.py  str_enum.py
aishell/utils/test/: test_aishell_config_manager.py  test_make_executable_command.py
